#93635 - Donor - fixed Chat and different massage overlap

--- a/src/themes/default/styles/plugin.toastify.css
+++ b/src/themes/default/styles/plugin.toastify.css
@@ -8,6 +8,10 @@
 
     .Toastify__toast {
         border-radius: $radius-base;
+
+        &-container {
+            bottom: 4.5em;
+        }
     }
 
     .green-background {
